--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ permissions:
   packages: write
 
 jobs:
-  build-binaries:
+  publish-btca:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
