--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,13 +1,13 @@
 {
 	"name": "btca",
 	"author": "Ben Davis",
-	"version": "0.5.5",
+	"version": "0.5.6",
 	"description": "CLI tool for asking questions about technologies using OpenCode",
 	"type": "module",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/davis7dotsh/better-context"
+		"url": "git+https://github.com/davis7dotsh/better-context.git"
 	},
 	"keywords": [
 		"cli",
