--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"prepare": "effect-language-service patch",
 		"dev": "turbo dev --ui tui",
 		"cli": "bun run apps/cli/src/index.ts",
-		"dev:simple": "bun --watch apps/server-simple/src/index.ts",
+		"dev:server": "bun --watch apps/server/src/index.ts",
 		"build:all": "turbo build",
 		"build:cli": "turbo build --filter=btca",
 		"build:web": "turbo build --filter=@btca/web",
@@ -34,13 +34,13 @@
 		"check:web": "turbo check --filter=@btca/web",
 		"check:shared": "turbo check --filter=@btca/shared",
 		"check:server": "turbo check --filter=@btca/server",
-		"check:server-simple": "turbo check --filter=@btca/server-simple",
+
 		"format:all": "turbo format",
 		"format:cli": "turbo format --filter=btca",
 		"format:web": "turbo format --filter=@btca/web",
 		"format:shared": "turbo format --filter=@btca/shared",
 		"format:server": "turbo format --filter=@btca/server",
-		"format:server-simple": "turbo format --filter=@btca/server-simple",
+
 		"clean": "find . -type d \\( -name node_modules -o -name .svelte-kit -o -name .turbo -o -name .vercel \\) -prune -exec rm -rf {} +"
 	},
 	"devDependencies": {
