--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,16 +2,6 @@ name: Publish
 
 on:
   workflow_dispatch:
-    inputs:
-      bump:
-        description: 'Version bump type'
-        required: true
-        default: 'patch'
-        type: choice
-        options:
-          - patch
-          - minor
-          - major
 
 permissions:
   contents: write
@@ -23,9 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
@@ -35,66 +22,26 @@ jobs:
       - name: Setup Node.js for npm publish
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: '25'
           registry-url: 'https://registry.npmjs.org'
-
-      - name: Configure Git
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
 
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
-      - name: Bump version
-        id: version
-        run: |
-          cd apps/cli
-          OLD_VERSION=$(jq -r '.version' package.json)
-          npm version ${{ inputs.bump }} --no-git-tag-version
-          NEW_VERSION=$(jq -r '.version' package.json)
-          echo "old_version=$OLD_VERSION" >> $GITHUB_OUTPUT
-          echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
-          echo "Bumped version from $OLD_VERSION to $NEW_VERSION"
-
-      - name: Build binaries for all platforms
+      - name: Build JS bundle & artifacts
         run: bun run build:cli
 
-      - name: Verify binaries exist
+      - name: Get version from package.json
+        id: version
         run: |
-          ls -la apps/cli/dist/
-          test -f apps/cli/dist/btca-darwin-arm64
-          test -f apps/cli/dist/btca-darwin-x64
-          test -f apps/cli/dist/btca-linux-arm64
-          test -f apps/cli/dist/btca-linux-x64
-          test -f apps/cli/dist/btca-windows-x64.exe
+          VERSION=$(jq -r '.version' apps/cli/package.json)
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Publish to npm
         run: npm publish --provenance --access public
         working-directory: apps/cli
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Commit version bump
-        run: |
-          git add apps/cli/package.json
-          git commit -m "chore: release @btca/cli v${{ steps.version.outputs.version }}"
-          git push
 
       - name: Create Git tag
         run: |
           git tag "v${{ steps.version.outputs.version }}"
           git push origin "v${{ steps.version.outputs.version }}"
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: v${{ steps.version.outputs.version }}
-          name: v${{ steps.version.outputs.version }}
-          generate_release_notes: true
-          files: |
-            apps/cli/dist/btca-darwin-arm64
-            apps/cli/dist/btca-darwin-x64
-            apps/cli/dist/btca-linux-arm64
-            apps/cli/dist/btca-linux-x64
-            apps/cli/dist/btca-windows-x64.exe
