--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
 		"build:cli": "turbo build --filter=btca",
 		"build:web": "turbo build --filter=@btca/web",
 		"check:all": "turbo check",
-		"check:cli": "turbo check --filter=@btca/cli",
+		"check:cli": "turbo check --filter=btca",
 		"check:cli-legacy": "turbo check --filter=btca",
 		"check:web": "turbo check --filter=@btca/web",
 		"check:shared": "turbo check --filter=@btca/shared",
 		"check:server": "turbo check --filter=@btca/server",
 		"format:all": "turbo format",
-		"format:cli": "turbo format --filter=@btca/cli",
+		"format:cli": "turbo format --filter=btca",
 		"format:cli-legacy": "turbo format --filter=btca",
 		"format:web": "turbo format --filter=@btca/web",
 		"format:shared": "turbo format --filter=@btca/shared",
