subscriptions in progress, although really almost there...

--- a/apps/chat-web/.env.example
+++ b/apps/chat-web/.env.example
@@ -23,6 +23,11 @@ DAYTONA_API_KEY=your_daytona_api_key_here
 # This is passed to the sandbox environment for btca authentication
 OPENCODE_API_KEY=your_opencode_api_key_here
 
+# Autumn (Stripe wrapper)
+# =======================
+# Secret key from Autumn for subscription management
+AUTUMN_SECRET_KEY=your_autumn_secret_key_here
+
 # Server Configuration
 # ====================
 # Port to run the web server on (optional, defaults to 3000)
