--- a/apps/chat-web/package.json
+++ b/apps/chat-web/package.json
@@ -16,33 +16,38 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^5.2.12",
-		"@sveltejs/kit": "^2.48.5",
-		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@sveltejs/adapter-node": "^5.5.1",
+		"@sveltejs/kit": "^2.49.5",
+		"@sveltejs/vite-plugin-svelte": "^6.2.4",
+		"atmn": "^0.0.30",
 		"@tailwindcss/typography": "^0.5.19",
-		"@tailwindcss/vite": "^4.1.17",
-		"@typescript/native-preview": "^7.0.0-dev.20251231.1",
-		"prettier": "^3.7.4",
-		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.7.1",
-		"svelte": "^5.43.8",
-		"svelte-check": "^4.3.4",
-		"tailwindcss": "^4.1.17",
+		"@tailwindcss/vite": "^4.1.18",
+		"@typescript/native-preview": "^7.0.0-dev.20260115.1",
+		"prettier": "^3.8.0",
+		"prettier-plugin-svelte": "^3.4.1",
+		"prettier-plugin-tailwindcss": "^0.7.2",
+		"svelte": "^5.46.4",
+		"svelte-check": "^4.3.5",
+		"tailwindcss": "^4.1.18",
 		"turbo": "^2.7.4",
-		"vite": "^7.2.2"
+		"vite": "^7.3.1"
 	},
 	"dependencies": {
 		"@btca/shared": "workspace:*",
-		"@clerk/clerk-js": "^5.56.0",
-		"@clerk/types": "^4.49.0",
+		"@clerk/clerk-js": "^5.119.1",
+		"@clerk/types": "^4.101.10",
 		"@daytonaio/sdk": "^0.130.0",
-		"@lucide/svelte": "^0.560.0",
-		"convex": "^1.27.0",
+		"@lucide/svelte": "^0.562.0",
+		"@tmcp/adapter-zod": "^0.1.7",
+		"@tmcp/transport-http": "^0.8.3",
+		"autumn-js": "^0.1.69",
+		"convex": "^1.31.4",
 		"convex-svelte": "^0.0.12",
 		"isomorphic-dompurify": "^2.35.0",
-		"marked": "^15.0.12",
-		"nanoid": "^5.1.5",
-		"shiki": "^1.0.0",
-		"zod": "^3.25.67"
+		"marked": "^17.0.1",
+		"nanoid": "^5.1.6",
+		"shiki": "^3.21.0",
+		"tmcp": "^1.19.0",
+		"zod": "^4.3.5"
 	}
 }
