--- a/apps/chat-web/package.json
+++ b/apps/chat-web/package.json
@@ -40,12 +40,16 @@
 		"@lucide/svelte": "^0.562.0",
 		"@tmcp/adapter-zod": "^0.1.7",
 		"@tmcp/transport-http": "^0.8.3",
+		"@upstash/redis": "^1.36.1",
 		"autumn-js": "^0.1.69",
 		"convex": "^1.31.5",
 		"convex-svelte": "^0.0.12",
+		"ioredis": "^5.9.2",
 		"isomorphic-dompurify": "^2.35.0",
 		"marked": "^17.0.1",
 		"nanoid": "^5.1.6",
+		"posthog-js": "^1.328.0",
+		"posthog-node": "^5.21.1",
 		"shiki": "^3.21.0",
 		"tmcp": "^1.19.0",
 		"zod": "^4.3.5"
