--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -30,7 +30,9 @@
 	"exports": {
 		".": "./src/index.ts",
 		"./stream": "./src/stream/index.ts",
-		"./stream/types": "./src/stream/types.ts"
+		"./stream/types": "./src/stream/types.ts",
+		"./config/remote": "./src/config/remote.ts",
+		"./resources/schema": "./src/resources/schema.ts"
 	},
 	"files": [
 		"src",
@@ -49,9 +51,26 @@
 		"prettier": "^3.7.4"
 	},
 	"dependencies": {
+		"@ai-sdk/amazon-bedrock": "^4.0.30",
+		"@ai-sdk/anthropic": "^3.0.23",
+		"@ai-sdk/azure": "^3.0.18",
+		"@ai-sdk/cerebras": "^2.0.20",
+		"@ai-sdk/cohere": "^3.0.11",
+		"@ai-sdk/deepinfra": "^2.0.19",
+		"@ai-sdk/google": "^3.0.13",
+		"@ai-sdk/google-vertex": "^4.0.28",
+		"@ai-sdk/groq": "^3.0.15",
+		"@ai-sdk/mistral": "^3.0.12",
+		"@ai-sdk/openai": "^3.0.18",
+		"@ai-sdk/openai-compatible": "^2.0.18",
+		"@ai-sdk/perplexity": "^3.0.11",
+		"@ai-sdk/togetherai": "^2.0.20",
+		"@ai-sdk/xai": "^3.0.34",
 		"@btca/shared": "workspace:*",
 		"@opencode-ai/sdk": "^1.1.28",
+		"ai": "^6.0.49",
 		"hono": "^4.7.11",
+		"opencode-ai": "^1.1.36",
 		"zod": "^3.25.76"
 	}
 }
