--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -53,5 +53,8 @@
 		"prettier": "^3.7.4",
 		"shiki": "^3.20.0",
 		"solid-js": "^1.9.10"
+	},
+	"dependencies": {
+		"better-result": "^2.6.0"
 	}
 }
